--- a/proyectCitas/src/assets/main.scss
+++ b/proyectCitas/src/assets/main.scss
@@ -1,9 +1,29 @@
+@import '..\..\node_modules\bootstrap\dist\css\bootstrap.css';
+
 body{
     background-color: rgb(230, 230, 230);
+}
+
+.loginContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+    flex-direction: column;
 }
 
 .mainContainer{
     width: 100%;
     display: flex;
     justify-content: center;
+
+    align-items: center;
+    flex-direction: column;
 }
+
+.subRow{
+    margin-bottom: 10px;
+}
+
+
