--- a/proyectCitas/src/assets/main.scss
+++ b/proyectCitas/src/assets/main.scss
@@ -1,4 +1,5 @@
 @import '..\..\node_modules\bootstrap\dist\css\bootstrap.css';
+@import '../proyectCitas/node_modules/bootstrap-icons/font/bootstrap-icons.css';
 
 body{
     background-color: rgb(230, 230, 230);
