--- a/proyectCitas/src/assets/main.scss
+++ b/proyectCitas/src/assets/main.scss
@@ -6,6 +6,17 @@ body{
 }
 
 .loginContainer{
+    padding-top: 25px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+    flex-direction: column;
+}
+
+.RegisterForm{
+    padding-top: 25px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -24,7 +35,7 @@ body{
 }
 
 .subRow{
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 
