--- a/proyectCitas/src/assets/main.scss
+++ b/proyectCitas/src/assets/main.scss
@@ -1,5 +1,6 @@
 @import '..\..\node_modules\bootstrap\dist\css\bootstrap.css';
 @import '../proyectCitas/node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import './loginStyle.scss';
 
 body{
     background-color: rgb(230, 230, 230);
